--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8.0)
+option(RAW_VALUES_DEC "Display Raw Values in Decimal instead of Hex" OFF)
 project(Ares-Disk )
 add_executable(AresDisk main.cpp)
 set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
+if(RAW_VALUES_DEC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRAWDEC")
+endif()
 SET_TARGET_PROPERTIES(AresDisk PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(AresDisk atasmart)
 target_link_libraries(AresDisk ncursesw)
