feat: fix segmentation fault on initscr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ if(RAW_VALUES_DEC)
 endif()
 SET_TARGET_PROPERTIES(AresDisk PROPERTIES OUTPUT_NAME crazy)
 target_link_libraries(AresDisk atasmart)
+target_link_libraries(CrazyDiskInfo tinfow)
 target_link_libraries(AresDisk ncursesw)
 INSTALL(TARGETS AresDisk RUNTIME DESTINATION /usr/sbin)
